<resources>
    <string name="app_name">Panda School</string>
    <string name="nav_fragment1">Study</string>
    <string name="nav_fragment2">Dictionary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentStudy1">Quiz1</string>
    <string name="fragmentStudy2">Quiz2</string>
    <string name="fragmentStudy3">Quiz3</string>
    <string name="fragmentStudy4">Quiz4</string>
    <string name="fragmentDictionary">Dictionary</string>
    <string name="fragmentAddWord">Add word</string>
    <string name="nav_header_image_description">Logo of the app</string>
    <string name="nav_dictionary">Dictionary</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="proximity_dialog_title">Choose value</string>
    <string name="choose_dialog_title">Choose a value</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="max_distance_text">Enter maximum search distance</string>
    <string name="nav_fragment3">Add</string>
    <string name="quiz1_lang1">Lang 1</string>
    <string name="quiz1_lang2">Lang 2</string>
    <string name="quiz1_next">Next</string>
    <string name="quiz2_flashcard">Flashcard</string>
    <string name="quiz2_next">Next</string>
    <string name="quiz3_check">Check</string>
    <string name="quiz3_hint">Type word in lang 2</string>
    <string name="quiz3_text">Lang1</string>
    <string name="quiz4_text">Lang 2</string>
    <string name="quiz4_hint">Type word in lang 1</string>
    <string name="bottom_nav_student">Student List</string>
    <string name="bottom_nav_plan">Plan</string>
    <string name="navigation_study">Study</string>
    <string name="dropdown_menu">Quiz</string>
    <string name="nav_settings">Settings</string>

    <string name="home">Home</string>
    <string name="nav_1">Calendar</string>
    <string name="framentDailyPlan">Daily Plan</string>
    <string name="fragmenStudent">Student</string>
    <string name="fragmentStudent">Student</string>

    <string name="prev_day">-</string>
    <string name="next_day">+</string>
    <string name="calendar">Calendar</string>
    <string name="fragmentPlan">Plan</string>
    <string name="student">Student</string>
    <string name="Student">student</string>
</resources>