<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictionary"
            android:checked="true"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/nav_dictionary" />
        <item
            android:id="@+id/nav_settings"
            android:checked="true"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>